--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "test-backend",
-  "version": "1.0.0",
-  "description": "backend de prueba",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.6.1",
     "sequelize": "^6.33.0"
   }
 }
