--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-  "development": {
+  "development_old": {
     "username": "root",
     "password": "Utfsmehc2023.",
     "database": "dbtest_local",
@@ -13,7 +13,7 @@
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
-  "production": {
+  "development": {
     "username": "admin",
     "password": "masterTFM",
     "database": "dbtest",
